# chat-app

./: .gitignore  README.md  package-lock.json  package.json  readme.md  tailwind.config.js
src/: index.tsx  main.tsx
src-api/: .env.example  Cargo.toml
src-api/migrations/: 20240513_chatapp.sql  20240610_chatapp.sql
src-api/src/: error.rs  main.rs  session.rs  tests.rs  utils.rs
src-api/src/database/: error.rs  mod.rs  query.rs  schema.rs
src-api/src/database/query/: builder.rs  filter.rs  join.rs  mod.rs
src-api/src/database/schema/: account.rs  mod.rs  salt.rs
src-api/src/routes/: auth.rs  user.rs
src-api/src/utils/: mod.rs  password.rs
src/modules/: App.tsx  Login.tsx  Utils.tsx
src/modules/components/: InboxEntries.tsx  Loading.tsx  Pane.tsx  Searchbar.tsx  UserInfo.tsx  UsersList.tsx
src/styles/: index.css  main.css
