[package]
name = "chat-app-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
base64 = "0.22.1"
env_logger = "0.11.3"
mime = "0.3.17"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
serde = "1.0.201"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres" ] }
tokio = "1.37.0"
uuid = { version = "1.8.0", features = [ "v4" ] }
